--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Portfolio Web Site for Quakka">
   <meta name="author" content="quakaa">
-  <link rel="icon" type="image/png" href="images/커피로고.png">
+  <link rel="icon" type="image/png" href="images/snowflake-solid.png">
   <title>Quakka's Portfolio</title>
   <script src="https://kit.fontawesome.com/69a15e8522.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,8 +17,31 @@
 </head>
 
 <body>
-
-
+  <!-- Navbar -->
+  <nav id="navbar">
+    <div class="navbar__logo">
+      <img src="./images/snowflake-solid-white.png" alt="메뉴 로고">
+      <a href="#">Quakka</a>
+    </div>
+    <ul class="navbar__menu">
+      <li class="navbar__menu__item">Home</li>
+      <li class="navbar__menu__item">About</li>
+      <li class="navbar__menu__item">Skills</li>
+      <li class="navbar__menu__item">My work</li>
+      <li class="navbar__menu__item">Testimonial</li>
+      <li class="navbar__menu__item">Contact</li>
+    </ul>
+  </nav>
+  <!-- About Me -->
+  <section id="about"></section>
+  <!-- Skills -->
+  <section id="skills"></section>
+  <!-- Work -->
+  <section id="work"></section>
+  <!-- Testimonials -->
+  <section id="testimonials"></section>
+  <!-- Contact Me -->
+  <footer id="contact"></footer>
 </body>
 
 </html>
