--- a/index.html
+++ b/index.html
@@ -32,7 +32,21 @@
       <li class="navbar__menu__item">Contact</li>
     </ul>
   </nav>
-  <!-- About Me -->
+  <!-- Home -->
+  <section id="home">
+    <img src="./images/quakka.jpg" alt="프로필 사진" class="home__avatar">
+    <h1 class="home__title">
+      Hello,<br>
+      I`m Quakka dev
+    </h1>
+    <h2 class="home__description">
+      I'm studying because I want to be a front-end junior developer.
+    </h2>
+    <a href="#" class="home__contact">
+      CONTACT ME
+    </a>
+  </section>
+  <!-- About-->
   <section id="about"></section>
   <!-- Skills -->
   <section id="skills"></section>
