--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="major__description">
           HTML, CSS, JavaScript,<br>
-          React, Web APIs
+          TypeScript, React, Web APIs
         </div>
       </li>
       <li class="major">
@@ -96,7 +96,7 @@
     </ul>
     <ol class="about__career">
       <li class="job">
-        <img class="job__logo" src="#" alt="코드스테이츠 로고">
+        <img class="job__logo" src="./images/jobs/code-states.png" alt="코드스테이츠 로고">
         <div>
           <p class="job__name">코드스테이츠 부트캠프 JS과정</p>
           <p class="job__period">2021.01 - 2021.07</p>
@@ -126,7 +126,95 @@
     </ol>
   </section>
   <!-- Skills -->
-  <section id="skills"></section>
+  <section id="skills">
+    <h1>Skills</h1>
+    <h2>Skills & Attributes</h2>
+    <p>
+      저는 새로운 기술을 배우는데 흥미가 많은편이며, 협업을 위한 툴 및 방법론들도 공부하고있습니다.<br>
+      그리고 계획적으로 일을하며 시간및 약속을 잘 지키려고 노력하고있습니다.
+    </p>
+    <div class="skillset">
+      <div class="skillset__left">
+        <h3 class="skillset__title">Skills</h3>
+        <ul class="skills">
+          <li class="skill">
+            <div class="skill__description">
+              <span>HTML</span>
+              <span>95%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </li>
+          <li class="skill">
+            <div class="skill__description">
+              <span>CSS</span>
+              <span>95%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </li>
+          <li class="skill">
+            <div class="skill__description">
+              <span>JavaScript</span>
+              <span>90%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </li>
+          <li class="skill">
+            <div class="skill__description">
+              <span>TypeScript</span>
+              <span>75%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </li>
+          <li class="skill">
+            <div class="skill__description">
+              <span>React</span>
+              <span>80%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </li>
+          <li class="skill">
+            <div class="skill__description">
+              <span>Node</span>
+              <span>70%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value"></div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="skillset__right">
+        <div class="tools">
+          <h3 class="skillset__title">Tools</h3>
+          <ul class="tools__list">
+            <li><span>Visual Studio Code</span></li>
+            <li><span>IntelliJ</span></li>
+            <li><span>Eclipse</span></li>
+            <li><span>Spring Tool Suite</span></li>
+            <li><span>Atom</span></li>
+          </ul>
+        </div>
+        <div class="etc">
+          <h3 class="skillset__title">Etc</h3>
+          <ul class="etc__list">
+            <li><span>Git</span></li>
+            <li><span>Agile Scrum</span></li>
+            <li><span>Velog Blog</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Work -->
   <section id="work"></section>
   <!-- Testimonials -->
