--- a/index.html
+++ b/index.html
@@ -216,7 +216,34 @@
     </div>
   </section>
   <!-- Work -->
-  <section id="work"></section>
+  <section id="work">
+    <h1>
+      My work
+    </h1>
+    <h3>
+      Projects
+    </h3>
+    <div class="work__categories">
+      <button class="category__btn">All<span class="category__count"></span></button>
+      <button class="category__btn">Publishing<span class="category__count"></span></button>
+      <button class="category__btn">Web App<span class="category__count"></span></button>
+      <button class="category__btn">Etc<span class="category__count"></span></button>
+    </div>
+    <div class="work__projects">
+      <a href="#" class="project" target="_blank">
+        <img src="#" alt="" class="project__img">
+        <div class="project__description">
+          <h3>
+            <!-- 프로젝트명 -->
+          </h3>
+          <span>
+            <!-- 프로젝트 설명 -->
+          </span>
+        </div>
+
+      </a>
+    </div>
+  </section>
   <!-- Testimonials -->
   <section id="testimonials"></section>
   <!-- Contact Me -->
