--- a/index.html
+++ b/index.html
@@ -240,12 +240,38 @@
             <!-- 프로젝트 설명 -->
           </span>
         </div>
-
       </a>
     </div>
   </section>
   <!-- Testimonials -->
-  <section id="testimonials"></section>
+  <section id="testimonials">
+    <h1>Testimonials</h1>
+    <h3>See what they say about me</h3>
+    <div class="testimonials">
+      <div class="testimonial">
+        <img src="#" alt="" class="testimonial__avatar">
+        <div class="testimonial__speech-bubble">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae placeat sapiente inventore quae dolore
+            totam quos suscipit laudantium tenetur aperiam itaque quia illo ratione mollitia molestiae ducimus, fugit
+            dignissimos voluptate.
+          </p>
+          <p class="name"><a href="#">Ellie</a> / Samsung</p>
+        </div>
+      </div>
+      <div class="testimonial">
+        <img src="#" alt="" class="testimonial__avatar">
+        <div class="testimonial__speech-bubble">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae placeat sapiente inventore quae dolore
+            totam quos suscipit laudantium tenetur aperiam itaque quia illo ratione mollitia molestiae ducimus, fugit
+            dignissimos voluptate.
+          </p>
+          <p class="name"><a href="#">Ellie</a> / Samsung</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Contact Me -->
   <footer id="contact"></footer>
 </body>
