--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <h3>See what they say about me</h3>
     <div class="testimonials">
       <div class="testimonial">
-        <img src="#" alt="" class="testimonial__avatar">
+        <img src="./images/profile/human.jpg" alt="" class="testimonial__avatar">
         <div class="testimonial__speech-bubble">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae placeat sapiente inventore quae dolore
@@ -260,7 +260,7 @@
         </div>
       </div>
       <div class="testimonial">
-        <img src="#" alt="" class="testimonial__avatar">
+        <img src="./images/profile/human.jpg" alt="" class="testimonial__avatar">
         <div class="testimonial__speech-bubble">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae placeat sapiente inventore quae dolore
@@ -273,7 +273,29 @@
     </div>
   </section>
   <!-- Contact Me -->
-  <footer id="contact"></footer>
+  <footer id="contact">
+    <h1 class="contact__title">
+      Let's talk
+    </h1>
+    <h2 class="cntact__emal">wldns12378@gmail.com</h2>
+    <div class="contact__links">
+      <a href="#" target="_blank">
+        <!-- github 이미지 -->
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="#" target="_blank">
+        <!-- velog 이미지 -->
+        <i class="fas fa-blog"></i>
+      </a>
+      <a href="#" target="_blank">
+        <!-- linked IN 이미지 -->
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
+    <span class="copylight">
+      2021 Quakka - All rights reserved
+    </span>
+  </footer>
 </body>
 
 </html>
