--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <!-- Navbar -->
   <nav id="navbar">
     <div class="navbar__logo">
-      <img src="./images/icon/snowflake-solid-white.png" alt="메뉴 로고">
+      <i class="fas fa-dice-d20"></i>
       <a href="#">Quakka</a>
     </div>
     <ul class="navbar__menu">
-      <li class="navbar__menu__item">Home</li>
+      <li class="navbar__menu__item active">Home</li>
       <li class="navbar__menu__item">About</li>
       <li class="navbar__menu__item">Skills</li>
       <li class="navbar__menu__item">My work</li>
