--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   </nav>
   <!-- Home -->
   <section id="home">
-    <img src="./images/profile/quakka.jpg" alt="프로필 사진" class="home__avatar">
+    <img class="home__avatar" src="./images/profile/quakka.jpg" alt="프로필 사진">
     <h1 class="home__title">
       안녕하세요,<br>
-      저는 Quakka라는 닉네임을 가진 주니어 개발자입니다.
+      주니어 개발자를 지망하고 있습니다.
     </h1>
     <h2 class="home__description">
       항상 자기주도적이고 능동적으로 성장하는 개발자가 되겠습니다.
