--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     </a>
   </section>
   <!-- About-->
-  <section id="about">
+  <section id="about" class="section">
     <h1>
       About Me
     </h1>
     <p>
-      저는 프론트엔드 주니어개발자를 목표를 하여 공부하고 있습니다.<br>
-      3D영상관련 직업으로 일을하다가 커리어 전환을 위해 그만두었으며,<br>
+      저는 프론트엔드 주니어개발자를 목표를 하여 공부하고 있습니다.
+      3D영상관련 직업으로 일을하다가 커리어 전환을 위해 그만두었으며,
       코딩 부트캠프를 통하여 자기주도학습과 자바스크립트로 웹개발 기술들을 배웠습니다.
     </p>
     <ul class="about__majors">
@@ -61,9 +61,9 @@
         <div class="major__icon">
           <i class="fab fa-react"></i>
         </div>
-        <div class="major__title">
+        <h2 class="major__title">
           프론트 엔드
-        </div>
+        </h2>
         <div class="major__description">
           HTML, CSS, JavaScript,<br>
           TypeScript, React, Web APIs
@@ -73,9 +73,9 @@
         <div class="major__icon">
           <i class="fab fa-js-square"></i>
         </div>
-        <div class="major__title">
+        <h2 class="major__title">
           백 엔드
-        </div>
+        </h2>
         <div class="major__description">
           JavaScript, Node,<br>
           Java, Rest APIs
@@ -85,9 +85,9 @@
         <div class="major__icon">
           <i class="fas fa-database"></i>
         </div>
-        <div class="major__title">
+        <h2 class="major__title">
           데이터베이스
-        </div>
+        </h2>
         <div class="major__description">
           Oracle, mySql,<br>
           Maria, Postgre
@@ -97,36 +97,36 @@
     <ol class="about__career">
       <li class="job">
         <img class="job__logo" src="./images/jobs/code-states.png" alt="코드스테이츠 로고">
-        <div>
-          <p class="job__name">코드스테이츠 부트캠프 JS과정</p>
+        <div class="job__description">
+          <p class="job__name">CodeStates JavaScript FullStack Course</p>
           <p class="job__period">2021.01 - 2021.07</p>
         </div>
       </li>
       <li class="job">
         <img class="job__logo" src="./images/jobs/kosta.png" alt="코스타 로고">
-        <div>
-          <p class="job__name">Kosta 국비학원 Java과정</p>
+        <div class="job__description">
+          <p class="job__name">Kosta Java Web Course</p>
           <p class="job__period">2020.02 - 2020.07</p>
         </div>
       </li>
       <li class="job">
         <img class="job__logo" src="./images/jobs/Maya.png" alt="마야 로고">
-        <div>
+        <div class="job__description">
           <p class="job__name">3D Animation Rigger 프리랜서</p>
           <p class="job__period">2019.08 - 2019.12</p>
         </div>
       </li>
       <li class="job">
         <img class="job__logo" src="./images/jobs/school.png" alt="수원과학대학교 로고">
-        <div>
-          <p class="job__name">수원과학대학에서 컴퓨터정보과를 전공함</p>
+        <div class="job__description">
+          <p class="job__name">수원과학대학 컴퓨터정보과 전공</p>
           <p class="job__period">2016.03 - 2019.02</p>
         </div>
       </li>
     </ol>
   </section>
   <!-- Skills -->
-  <section id="skills">
+  <section id="skills" class="section">
     <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
     <p>
@@ -216,7 +216,7 @@
     </div>
   </section>
   <!-- Work -->
-  <section id="work">
+  <section id="work" class="section">
     <h1>
       My work
     </h1>
@@ -244,7 +244,7 @@
     </div>
   </section>
   <!-- Testimonials -->
-  <section id="testimonials">
+  <section id="testimonials" class="section">
     <h1>Testimonials</h1>
     <h3>See what they say about me</h3>
     <div class="testimonials">
@@ -273,7 +273,7 @@
     </div>
   </section>
   <!-- Contact Me -->
-  <footer id="contact">
+  <footer id="contact" class="section">
     <h1 class="contact__title">
       Let's talk
     </h1>
