--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </a>
   </section>
   <!-- About-->
-  <section id="about" class="section">
+  <section id="about" class="section section__container">
     <h1>
       About Me
     </h1>
@@ -127,90 +127,92 @@
   </section>
   <!-- Skills -->
   <section id="skills" class="section">
-    <h1>Skills</h1>
-    <h2>Skills & Attributes</h2>
-    <p>
-      저는 새로운 기술을 배우는데 흥미가 많은편이며, 협업을 위한 툴 및 방법론들도 공부하고있습니다.<br>
-      그리고 계획적으로 일을하며 시간및 약속을 잘 지키려고 노력하고있습니다.
-    </p>
-    <div class="skillset">
-      <div class="skillset__left">
-        <h3 class="skillset__title">Skills</h3>
-        <ul class="skills">
-          <li class="skill">
-            <div class="skill__description">
-              <span>HTML</span>
-              <span>95%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </li>
-          <li class="skill">
-            <div class="skill__description">
-              <span>CSS</span>
-              <span>95%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </li>
-          <li class="skill">
-            <div class="skill__description">
-              <span>JavaScript</span>
-              <span>90%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </li>
-          <li class="skill">
-            <div class="skill__description">
-              <span>TypeScript</span>
-              <span>75%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </li>
-          <li class="skill">
-            <div class="skill__description">
-              <span>React</span>
-              <span>80%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </li>
-          <li class="skill">
-            <div class="skill__description">
-              <span>Node</span>
-              <span>70%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="skillset__right">
-        <div class="tools">
-          <h3 class="skillset__title">Tools</h3>
-          <ul class="tools__list">
-            <li><span>Visual Studio Code</span></li>
-            <li><span>IntelliJ</span></li>
-            <li><span>Eclipse</span></li>
-            <li><span>Spring Tool Suite</span></li>
-            <li><span>Atom</span></li>
+    <div class="section__container">
+      <h1>Skills</h1>
+      <h2>Skills & Attributes</h2>
+      <p>
+        저는 새로운 기술을 배우는데 흥미가 많은편이며, 협업을 위한 툴 및 방법론들도 공부하고있습니다.
+        그리고 계획적으로 일을하며 시간및 약속을 잘 지키려고 노력하고있습니다.
+      </p>
+      <div class="skillset">
+        <div class="skillset__left">
+          <h3 class="skillset__title">Skills</h3>
+          <ul class="skills">
+            <li class="skill">
+              <div class="skill__description">
+                <span>HTML</span>
+                <span>95%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 95%;"></div>
+              </div>
+            </li>
+            <li class="skill">
+              <div class="skill__description">
+                <span>CSS</span>
+                <span>95%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 95%;"></div>
+              </div>
+            </li>
+            <li class="skill">
+              <div class="skill__description">
+                <span>JavaScript</span>
+                <span>90%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 90%;"></div>
+              </div>
+            </li>
+            <li class="skill">
+              <div class="skill__description">
+                <span>TypeScript</span>
+                <span>75%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 75%;"></div>
+              </div>
+            </li>
+            <li class="skill">
+              <div class="skill__description">
+                <span>React</span>
+                <span>80%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 80%;"></div>
+              </div>
+            </li>
+            <li class="skill">
+              <div class="skill__description">
+                <span>Node</span>
+                <span>70%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 70%;"></div>
+              </div>
+            </li>
           </ul>
         </div>
-        <div class="etc">
-          <h3 class="skillset__title">Etc</h3>
-          <ul class="etc__list">
-            <li><span>Git</span></li>
-            <li><span>Agile Scrum</span></li>
-            <li><span>Velog Blog</span></li>
-          </ul>
+        <div class="skillset__right">
+          <div class="tools">
+            <h3 class="skillset__title">Tools</h3>
+            <ul class="tools__list">
+              <li><span>Visual Studio Code</span></li>
+              <li><span>IntelliJ</span></li>
+              <li><span>Eclipse</span></li>
+              <li><span>Spring Tool Suite</span></li>
+              <li><span>Atom</span></li>
+            </ul>
+          </div>
+          <div class="etc">
+            <h3 class="skillset__title">Etc</h3>
+            <ul class="etc__list">
+              <li><span>Git</span></li>
+              <li><span>Agile Scrum</span></li>
+              <li><span>Velog Blog</span></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
