--- a/index.html
+++ b/index.html
@@ -275,29 +275,33 @@
   </section>
   <!-- Testimonials -->
   <section id="testimonials" class="section">
-    <h1>Testimonials</h1>
-    <h3>See what they say about me</h3>
-    <div class="testimonials">
-      <div class="testimonial">
-        <img src="./images/profile/human.jpg" alt="" class="testimonial__avatar">
-        <div class="testimonial__speech-bubble">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae placeat sapiente inventore quae dolore
-            totam quos suscipit laudantium tenetur aperiam itaque quia illo ratione mollitia molestiae ducimus, fugit
-            dignissimos voluptate.
-          </p>
-          <p class="name"><a href="#">Ellie</a> / Samsung</p>
+    <div class="section__container">
+      <h1>Testimonials</h1>
+      <h3>See what they say about me</h3>
+      <div class="testimonials">
+        <div class="testimonial">
+          <img src="./images/profile/human.jpg" alt="" class="testimonial__avatar">
+          <div class="testimonial__speech-bubble">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae placeat sapiente inventore quae
+              dolore
+              totam quos suscipit laudantium tenetur aperiam itaque quia illo ratione mollitia molestiae ducimus, fugit
+              dignissimos voluptate.
+            </p>
+            <p class="name"><a href="#">Ellie</a> / Samsung</p>
+          </div>
         </div>
-      </div>
-      <div class="testimonial">
-        <img src="./images/profile/human.jpg" alt="" class="testimonial__avatar">
-        <div class="testimonial__speech-bubble">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae placeat sapiente inventore quae dolore
-            totam quos suscipit laudantium tenetur aperiam itaque quia illo ratione mollitia molestiae ducimus, fugit
-            dignissimos voluptate.
-          </p>
-          <p class="name"><a href="#">Ellie</a> / Samsung</p>
+        <div class="testimonial">
+          <div class="testimonial__speech-bubble">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae placeat sapiente inventore quae
+              dolore
+              totam quos suscipit laudantium tenetur aperiam itaque quia illo ratione mollitia molestiae ducimus, fugit
+              dignissimos voluptate.
+            </p>
+            <p class="name"><a href="#">Ellie</a> / Samsung</p>
+          </div>
+          <img src="./images/profile/human.jpg" alt="" class="testimonial__avatar">
         </div>
       </div>
     </div>
