--- a/index.html
+++ b/index.html
@@ -311,19 +311,20 @@
     <h1 class="contact__title">
       Let's talk
     </h1>
-    <h2 class="cntact__emal">wldns12378@gmail.com</h2>
+    <h2 class="contact__email">wldns12378@gmail.com</h2>
     <div class="contact__links">
-      <a href="#" target="_blank">
+      <a href="https://github.com/wldns0622" target="_blank">
         <!-- github 이미지 -->
         <i class="fab fa-github"></i>
       </a>
-      <a href="#" target="_blank">
+      <a href="https://velog.io/@wldns12378" target="_blank">
         <!-- velog 이미지 -->
         <i class="fas fa-blog"></i>
       </a>
-      <a href="#" target="_blank">
+      <a href="https://www.linkedin.com/in/ji-un-jeong-a2678b207/" target="_blank">
         <!-- linked IN 이미지 -->
         <i class="fab fa-linkedin-in"></i>
+
       </a>
     </div>
     <span class="copylight">
