--- a/index.html
+++ b/index.html
@@ -113,7 +113,14 @@
         <img class="job__logo" src="./images/jobs/Maya.png" alt="마야 로고">
         <div class="job__description">
           <p class="job__name">3D Animation Rigger 프리랜서</p>
-          <p class="job__period">2019.08 - 2019.12</p>
+          <p class="job__period">2019.11 - 2020.1</p>
+        </div>
+      </li>
+      <li class="job">
+        <img class="job__logo" src="./images/jobs/insung.png" alt="인성 테크">
+        <div class="job__description">
+          <p class="job__name">(주)인성테크 현장직</p>
+          <p class="job__period">2019.03 - 2019.10</p>
         </div>
       </li>
       <li class="job">
