CSS: Fixed Section Container

--- a/index.html
+++ b/index.html
@@ -226,58 +226,60 @@
   </section>
   <!-- Work -->
   <section id="work" class="section">
-    <h1>
-      My work
-    </h1>
-    <h3>
-      Projects
-    </h3>
-    <div class="work__categories">
-      <button class="category__btn">All<span class="category__count">3</span></button>
-      <button class="category__btn">Publishing<span class="category__count">3</span></button>
-      <button class="category__btn">Web App<span class="category__count">0</span></button>
-      <button class="category__btn">Etc<span class="category__count">0</span></button>
-    </div>
-    <div class="work__projects">
-      <a href="#" class="project" target="_blank">
-        <img class="project__img" src="./images/projects/complete_form.png" alt="">
-        <div class="project__description">
-          <h3>
-            <!-- 프로젝트명 -->
-            login-form
-          </h3>
-          <span>
-            <!-- 프로젝트 설명 -->
-            로그인 폼과 유효성검사
-          </span>
-        </div>
-      </a>
-      <a href="#" class="project" target="_blank">
-        <img class="project__img" src="./images/projects/complete_form.png" alt="">
-        <div class="project__description">
-          <h3>
-            <!-- 프로젝트명 -->
-            login-form
-          </h3>
-          <span>
-            <!-- 프로젝트 설명 -->
-            로그인 폼과 유효성검사
-          </span>
-        </div>
-      </a>
-      <a href="#" class="project" target="_blank">
-        <img class="project__img" src="./images/projects/complete_form.png" alt="">
-        <div class="project__description">
-          <h3>
-            <!-- 프로젝트명 -->
-            login-form
-          </h3>
-          <span>
-            <!-- 프로젝트 설명 -->
-            로그인 폼과 유효성검사
-          </span>
-        </div>
-      </a>
+    <div class="section__container">
+      <h1>
+        My work
+      </h1>
+      <h3>
+        Projects
+      </h3>
+      <div class="work__categories">
+        <button class="category__btn">All<span class="category__count">3</span></button>
+        <button class="category__btn">Publishing<span class="category__count">3</span></button>
+        <button class="category__btn">Web App<span class="category__count">0</span></button>
+        <button class="category__btn">Etc<span class="category__count">0</span></button>
+      </div>
+      <div class="work__projects">
+        <a href="#" class="project" target="_blank">
+          <img class="project__img" src="./images/projects/complete_form.png" alt="">
+          <div class="project__description">
+            <h3>
+              <!-- 프로젝트명 -->
+              login-form
+            </h3>
+            <span>
+              <!-- 프로젝트 설명 -->
+              로그인 폼과 유효성검사
+            </span>
+          </div>
+        </a>
+        <a href="#" class="project" target="_blank">
+          <img class="project__img" src="./images/projects/complete_form.png" alt="">
+          <div class="project__description">
+            <h3>
+              <!-- 프로젝트명 -->
+              login-form
+            </h3>
+            <span>
+              <!-- 프로젝트 설명 -->
+              로그인 폼과 유효성검사
+            </span>
+          </div>
+        </a>
+        <a href="#" class="project" target="_blank">
+          <img class="project__img" src="./images/projects/complete_form.png" alt="">
+          <div class="project__description">
+            <h3>
+              <!-- 프로젝트명 -->
+              login-form
+            </h3>
+            <span>
+              <!-- 프로젝트 설명 -->
+              로그인 폼과 유효성검사
+            </span>
+          </div>
+        </a>
+      </div>
     </div>
   </section>
   <!-- Testimonials -->
