JS: fixed nav scroll And Home Contact Button

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h2 class="home__description">
       항상 자기주도적이고 능동적으로 성장하는 개발자가 되겠습니다.
     </h2>
-    <a href="#" class="home__contact">
+    <a href="#contact" class="home__contact">
       CONTACT ME
     </a>
   </section>
