--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav id="navbar">
     <div class="navbar__logo">
       <i class="fas fa-dice-d20"></i>
-      <a href="#">Quakka</a>
+      <a href="#home">Quakka</a>
     </div>
     <ul class="navbar__menu">
       <li class="navbar__menu__item active" data-link="#home">Home</li>
@@ -39,17 +39,19 @@
   </nav>
   <!-- Home -->
   <section id="home">
-    <img class="home__avatar" src="./images/profile/quakka.jpg" alt="프로필 사진">
-    <h1 class="home__title">
-      안녕하세요,<br>
-      주니어 개발자를 지망하고 있습니다.
-    </h1>
-    <h2 class="home__description">
-      항상 자기주도적이고 능동적으로 성장하는 개발자가 되겠습니다.
-    </h2>
-    <a href="#contact" class="home__contact">
-      CONTACT ME
-    </a>
+    <div class="section__container">
+      <img class="home__avatar" src="./images/profile/quakka.jpg" alt="프로필 사진">
+      <h1 class="home__title">
+        안녕하세요,<br>
+        주니어 개발자를 지망하고 있습니다.
+      </h1>
+      <h2 class="home__description">
+        항상 자기주도적이고 능동적으로 성장하는 개발자가 되겠습니다.
+      </h2>
+      <a href="#contact" class="home__contact">
+        CONTACT ME
+      </a>
+    </div>
   </section>
   <!-- About-->
   <section id="about" class="section section__container">
