JS: remove active from nav

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         Projects
       </h3>
       <div class="work__categories">
-        <button class="category__btn" data-work="all">All<span class="category__count">3</span></button>
+        <button class="category__btn selected" data-work="all">All<span class="category__count">3</span></button>
         <button class="category__btn" data-work="front">Publishing<span class="category__count">3</span></button>
         <button class="category__btn" data-work="back">Web App<span class="category__count">1</span></button>
         <button class="category__btn" data-work="etc">Etc<span class="category__count">2</span></button>
